Refactor: adapt some lists to new collection interfaces